--- a/extension/chrome/popup.html
+++ b/extension/chrome/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YouDupe Extension</title>
+	<title>Gadlight Extension</title>
 	<script src="popup.js"></script>
 	<style>
 		body{margin:0;padding:0;font-family: Helvetica, Arial, sans;}
